@@ -24,6 +24,7 @@ Version 1.5 (not yet released)
 - added instructions on how to install additional spellchecker dictionaries
 - added sorting by different criteria (#256, #239)
 - improved source files viewer (#346)
+- included outdated documentation was replaced with online wiki docs (#343)
 
 
 Version 1.4.6
